better navigation for mobile

--- a/app/views/lesli/partials/_application-lesli-header.html.erb
+++ b/app/views/lesli/partials/_application-lesli-header.html.erb
@@ -105,7 +105,7 @@ Building a better future, one line of code at a time.
                     </div>
                 </div>
                 <div class="navbar-end is-hidden-desktop">
-                    <%= render(engine_navigation_partial) %>
+                    <%= render(engine_navigation_partial) if engine_navigation_partial %>
                 </div>
             </div>
         </nav>
