update documentation url

--- a/app/views/lesli/abouts/welcome.html.erb
+++ b/app/views/lesli/abouts/welcome.html.erb
@@ -118,7 +118,7 @@ html, body, * {
         The Open Source Ruby on Rails <span>SaaS Development Framework</span>
     </h1>
     <div class="buttons">
-        <a class="doc" target="blank" href="https://www.lesli.dev/">
+        <a class="doc" target="blank" href="https://www.lesli.dev/lesli/">
             Documentation
         </a>
         <a class="start" target="blank" href="https://www.lesli.dev/start/">
