--- a/app/views/lesli/layouts/application-devise.html.erb
+++ b/app/views/lesli/layouts/application-devise.html.erb
@@ -36,8 +36,8 @@ Building a better future, one line of code at a time.
 <html>
 <head>
     <script>const Lesli = <%= @lesli.to_json.html_safe %></script>
-    <%= render partial: "lesli/partials/application-head" %>
-    <%# render partial: "lesli/partials/application-data" %>
+    <%= render(partial: "lesli/partials/application-head") %>
+    <%# render(partial: "lesli/partials/application-data") %>
     <%= stylesheet_link_tag("lesli_shield/#{devise_controller}", media: "all") %>
     <%# Disable back button in browser after Logout using JavaScript %>
     <% if flash[:logout] == true %>
@@ -52,6 +52,7 @@ Building a better future, one line of code at a time.
 <body class="<%= application_body_class() %>">
     <%= yield %>
     <%= javascript_include_tag("lesli_shield/#{devise_controller}") %>
+    <%= render(partial: "lesli_assets/partials/application-lesli-fonts") %>
     <%= render(partial: "lesli/partials/application-analytics") %>
 </body>
 </html>
