--- a/app/views/lesli/errors/unauthorized.html.erb
+++ b/app/views/lesli/errors/unauthorized.html.erb
@@ -28,7 +28,7 @@
             <h2 class="mb-4">401 Unauthorized</h2>
 
             <p>
-                We could not validate your credentials. 
+                We could not validate your privileges. 
                 Please ask the administrator to send you an invite to see this content.
             </p>
 
