--- a/app/views/lesli/layouts/application-devise.html.erb
+++ b/app/views/lesli/layouts/application-devise.html.erb
@@ -48,6 +48,16 @@ Building a better future, one line of code at a time.
             });
         </script>
     <% end %>
+    <style>
+    .column.background {
+        background: linear-gradient(0deg, 
+            rgba(49, 106, 255, 0.4), 
+            rgba(49, 106, 255, 0.4)), 
+            url('<%= asset_path("lesli/brand/login-background.jpg") %>');
+        background-position: center;
+        background-size: cover;
+    }
+    </style>
 </head>
 <body class="<%= application_body_class() %>">
     <%= yield %>
