--- a/app/views/lesli/partials/_application-head.html.erb
+++ b/app/views/lesli/partials/_application-head.html.erb
@@ -2,7 +2,7 @@
 
 Lesli
 
-Copyright (c) 2023, Lesli Technologies, S. A.
+Copyright (c) 2025, Lesli Technologies, S. A.
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -17,9 +17,9 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program. If not, see http://www.gnu.org/licenses/.
 
-Lesli · Ruby on Rails SaaS development platform.
+Lesli · Ruby on Rails SaaS Development Framework.
 
-Made with ♥ by https://www.lesli.tech
+Made with ♥ by LesliTech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
@@ -42,7 +42,7 @@ Building a better future, one line of code at a time.
 
 <%# rails standard meta tags %>
 <%= csrf_meta_tags %>
-<%#= favicon %>
+<%= favicon %>
 
 <%# provide a short description of the page %>
 <meta name="description" content="<%#= website_meta_description %>">
