--- a/app/views/lesli/layouts/application-devise.html.erb
+++ b/app/views/lesli/layouts/application-devise.html.erb
@@ -38,7 +38,7 @@ Building a better future, one line of code at a time.
     <script>const Lesli = <%= @lesli.to_json.html_safe %></script>
     <%= render(partial: "lesli/partials/application-head") %>
     <%# render(partial: "lesli/partials/application-data") %>
-    <%= stylesheet_link_tag("lesli_shield/#{devise_controller}", media: "all") %>
+    <%= stylesheet_link_tag(lesli_asset_path(:lesli_shield, devise_controller), media: "all") %>
     <%# Disable back button in browser after Logout using JavaScript %>
     <% if flash[:logout] == true %>
         <script>
@@ -51,7 +51,7 @@ Building a better future, one line of code at a time.
 </head>
 <body class="<%= application_body_class() %>">
     <%= yield %>
-    <%= javascript_include_tag("lesli_shield/#{devise_controller}") %>
+    <%= javascript_include_tag(lesli_asset_path(:lesli_shield, devise_controller)) %>
     <%= render(partial: "lesli/partials/application-analytics") %>
 </body>
 </html>
