remove not used partials

--- a/app/views/lesli/layouts/application-devise.html.erb
+++ b/app/views/lesli/layouts/application-devise.html.erb
@@ -30,15 +30,13 @@ Building a better future, one line of code at a time.
 // · 
 %>
 
-<% devise_controller = controller_path.split('/')[1] %>
+<% public_app_controller = controller_path.split('/')[1] || controller_path %>
 
 <!DOCTYPE html>
 <html>
 <head>
-    <script>const Lesli = <%= @lesli.to_json.html_safe %></script>
     <%= render(partial: "lesli/partials/application-head") %>
-    <%# render(partial: "lesli/partials/application-data") %>
-    <%= stylesheet_link_tag(lesli_asset_path(:lesli_shield, devise_controller), media: "all") %>
+    <%= stylesheet_link_tag(lesli_asset_path(:lesli_shield, public_app_controller), media: "all") %>
     <%# Disable back button in browser after Logout using JavaScript %>
     <% if flash[:logout] == true %>
         <script>
@@ -51,7 +49,6 @@ Building a better future, one line of code at a time.
 </head>
 <body class="<%= application_body_class() %>">
     <%= yield %>
-    <%= javascript_include_tag(lesli_asset_path(:lesli_shield, devise_controller)) %>
     <%= render(partial: "lesli/partials/application-analytics") %>
 </body>
 </html>
