--- a/app/views/lesli/layouts/application-public.html.erb
+++ b/app/views/lesli/layouts/application-public.html.erb
@@ -35,24 +35,10 @@ Building a better future, one line of code at a time.
 <!DOCTYPE html>
 <html>
 <head>
-    <%= render partial: "lesli/partials/application-head" %>
-    <%#= render partial: "lesli/partials/application-data" %>
-    <%= render partial: "lesli/partials/application-public-scss" %>
-    <%= yield :application_custom_assets %>
-    <%# Disable back button in browser after Logout using JavaScript %>
-    <% if flash[:logout] == true %>
-        <script>
-            history.pushState(null, null, null);
-            window.addEventListener('popstate', function () {
-                history.pushState(null, null, null);
-            });
-        </script>
-    <% end %>
+    <%= render(partial: "lesli/partials/application-head") %>
 </head>
 <body class="<%= application_body_class() %>">
-    <%#= yield :application_public_custom_header %>
     <%= yield %>
-    <%= render partial: "lesli/partials/application-public-javascript" %>
-    <%= render partial: "lesli/partials/application-analytics" %>
+    <%= render(partial: "lesli/partials/application-analytics") %>
 </body>
 </html>
