--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -34,10 +34,10 @@ Building a better future, one line of code at a time.
 <html>
 <head>
     <%= render(partial: "lesli/partials/application-head") %>
-    <%= render(partial: "lesli/partials/application-data") %>
     <%= render(partial: "lesli/partials/application-lesli-css") %>
+    <%= render(partial: "lesli/partials/application-lesli-data") %>
 </head>
-<body class="<%= application_body_class %>">
+<body class="<%= application_body_class() %>">
     <%= render(partial: "lesli/partials/application-lesli-header") %>
     <%= render(partial: "lesli/partials/application-lesli-notifications") %>
     <main class="lesli-application-app">
@@ -47,6 +47,5 @@ Building a better future, one line of code at a time.
     <%= render(partial: "lesli_assets/partials/application-lesli-icons-engines") %>
     <%= render(partial: "lesli/partials/application-lesli-javascript") %>
     <%= render(partial: "lesli/partials/application-analytics") %>
-    <%= yield(:application_lesli_body_bottom) %>
 </body>
 </html>
