add language to html document

--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -31,7 +31,7 @@ Building a better future, one line of code at a time.
 %>
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <%= render(partial: "lesli/partials/application-head") %>
     <%= render(partial: "lesli/partials/application-lesli-css") %>
