--- a/app/views/lesli/layouts/application-devise.html.erb
+++ b/app/views/lesli/layouts/application-devise.html.erb
@@ -33,7 +33,7 @@ Building a better future, one line of code at a time.
 <% public_app_controller = controller_path.split('/')[1] || controller_path %>
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <%= render(partial: "lesli/partials/application-head") %>
     <%= stylesheet_link_tag(lesli_asset_path(:lesli_shield, public_app_controller), media: "all") %>
