--- a/app/views/lesli/layouts/application-public.html.erb
+++ b/app/views/lesli/layouts/application-public.html.erb
@@ -33,7 +33,7 @@ Building a better future, one line of code at a time.
 %>
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <%= render(partial: "lesli/partials/application-head") %>
 </head>
