add standar favicon

--- a/app/views/lesli/partials/_application-head.html.erb
+++ b/app/views/lesli/partials/_application-head.html.erb
@@ -42,7 +42,7 @@ Building a better future, one line of code at a time.
 
 <%# rails standard meta tags %>
 <%= csrf_meta_tags %>
-<%= favicon %>
+<%= lesli_favicon %>
 
 <%# provide a short description of the page %>
 <meta name="description" content="<%#= website_meta_description %>">
