--- a/app/views/lesli/partials/_application-lesli-javascript.html.erb
+++ b/app/views/lesli/partials/_application-lesli-javascript.html.erb
@@ -33,7 +33,7 @@ Building a better future, one line of code at a time.
 <div id="application-lesli-turbo-scripts"></div>
 
 <%= javascript_importmap_tags %>
-<%= javascript_include_tag(lesli_asset_path(:lesli_assets, 'application'), :defer => "defer") %>
+<%= javascript_include_tag(lesli_stylesheet_path(:lesli_assets, 'application'), :defer => "defer") %>
 <%= yield(:application_lesli_javascript) %>
 
 <%#
