--- a/app/views/lesli/layouts/application-devise.html.erb
+++ b/app/views/lesli/layouts/application-devise.html.erb
@@ -36,7 +36,7 @@ Building a better future, one line of code at a time.
 <html lang="en">
 <head>
     <%= render(partial: "lesli/partials/application-head") %>
-    <%= stylesheet_link_tag(lesli_asset_path(:lesli_shield, public_app_controller), media: "all") %>
+    <%= stylesheet_link_tag(lesli_stylesheet_path(:lesli_shield, public_app_controller), media: "all") %>
     <%# Disable back button in browser after Logout using JavaScript %>
     <% if flash[:logout] == true %>
         <script>
