Improve dynamic responders

--- a/app/views/lesli/errors/unauthorized.html.erb
+++ b/app/views/lesli/errors/unauthorized.html.erb
@@ -1,7 +1,7 @@
 <style>
 .error-401 .material-symbols {
     font-size: 8rem;
-    color: rgb(190,190,190);
+    color: #7a0000;
 }
 .error-401 h2 {
     font-size: 2rem;
