Make Lesli a pure core engine

--- a/app/views/lesli/layouts/application-devise.html.erb
+++ b/app/views/lesli/layouts/application-devise.html.erb
@@ -47,7 +47,7 @@ Building a better future, one line of code at a time.
         </script>
     <% end %>
 </head>
-<body class="<%= application_body_class() %>">
+<body class="<%= lesli_application_body_class() %>">
     <%= yield %>
     <%= render(partial: "lesli/partials/application-analytics") %>
 </body>
