--- a/app/views/lesli/layouts/application-public.html.erb
+++ b/app/views/lesli/layouts/application-public.html.erb
@@ -37,7 +37,7 @@ Building a better future, one line of code at a time.
 <head>
     <%= render(partial: "lesli/partials/application-head") %>
 </head>
-<body class="<%= application_body_class() %>">
+<body class="<%= lesli_application_body_class() %>">
     <%= yield %>
     <%= render(partial: "lesli/partials/application-analytics") %>
 </body>
