--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -37,7 +37,7 @@ Building a better future, one line of code at a time.
     <%= render(partial: "lesli/partials/application-lesli-css") %>
     <%= render(partial: "lesli/partials/application-lesli-data") %>
 </head>
-<body class="<%= application_body_class() %>">
+<body class="<%= lesli_application_body_class() %>">
     <%= render(partial: "lesli/partials/application-lesli-header") %>
     <%= render(partial: "lesli/partials/application-lesli-notifications") %>
     <main class="lesli-application-app">
