--- a/app/views/lesli/shared/dashboards/show.html.erb
+++ b/app/views/lesli/shared/dashboards/show.html.erb
@@ -2,7 +2,7 @@
 
 Lesli
 
-Copyright (c) 2023, Lesli Technologies, S. A.
+Copyright (c) 2026, Lesli Technologies, S. A.
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -19,7 +19,7 @@ along with this program. If not, see http://www.gnu.org/licenses/.
 
 Lesli · Ruby on Rails SaaS Development Framework.
 
-Made with ♥ by https://www.lesli.tech
+Made with ♥ by LesliTech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
@@ -30,4 +30,4 @@ Building a better future, one line of code at a time.
 // · 
 %>
 
-<%= render("lesli_dashboard/dashboards/shared/edit") if defined?(LesliDashboard) %>
+<%= render(template: "lesli_dashboard/dashboards/shared/show") if defined?(LesliDashboard) %>
